fix: remove scrollbar in createHomework component

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,10 @@ body,
   @apply h-full;
 }
 
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
 @layer base {
   :root {
     --background: 240 10% 3.9%;
